[package]
name = "beemovie"
version = "0.2.2"
authors = ["Rooster <roosterchicken@protonmail.ch>"]
edition = "2018"
description = "Bee Movie crate."
repository = "https://github.com/roosterchicken/beemovie-rs"
keywords = ["barry", "benson", "beemovie", "generator", "text"]
license = "MIT"
readme = "README.md"

[dependencies]
rand = "0.7.3"