[package]
name = "beemovie"
version = "1.0.1"
authors = ["Rooster <roosterchicken@protonmail.ch>"]
edition = "2018"
description = "Bee Movie crate."
repository = "https://github.com/roosterchicken/beemovie-rs"
keywords = ["barry", "benson", "beemovie", "generator", "text"]
license = "MIT"
readme = "README.md"

[dependencies]
rand = "0.8.3"

[dev-dependencies]
promptly = "0.3.0"
